# onnx_workflow_root

./: CMakeLists.txt  Inference.C  Inference_cnn.C  Inference_cnn.cxx  Inference_xgb.C  Inference_xgb.cxx  README.md  Run.C  Run_cnn.C  Run_xgb.C  input_cnn.csv  input_single.csv  input_xgb.csv  mnist_cnn.onnx  note_input_cnn.txt  output_cnn.csv  output_xgb.csv  xgboost_boston.onnx
denoise/: Inf.C  Inf_gnn.C  gnn_5_16.onnx  input_denoise_single.h  mixed.onnx  mixed_quantized.onnx  model.onnx  outliernet.onnx
keras/: cnn.py
mnist/: cnn.py  mnist_cnn.onnx
xgboost/: xgb.py
